Fixed border top of sidebar when expanded and collapsed

--- a/src/modules/common/components/bars/sideBar/sideBar.css
+++ b/src/modules/common/components/bars/sideBar/sideBar.css
@@ -45,6 +45,10 @@
     }
   }
 
+  &:first-child {
+    border-top: 1px solid var(--color-very-light-gray-20);
+  }
+
   &:last-child {
     flex-grow: 1;
     display: flex;
